[project]
name = "agno-playground"
version = "0.1.0"
description = ""
authors = [
    { name = "None" }
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "openai (>=1.65.2,<2.0.0)",
    "agno (>=1.1.7,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "duckduckgo-search (>=7.5.0,<8.0.0)",
    "lancedb (>=0.20.0,<0.21.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "tantivy (>=0.22.0,<0.23.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "exa-py (>=1.8.9,<2.0.0)",
    "pgvector (>=0.3.6,<0.4.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "newspaper4k (>=0.9.3.1,<0.10.0.0)",
    "lxml-html-clean (>=0.4.1,<0.5.0)",
    "google-cloud-storage (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"


[tool.poetry]
package-mode = false


[tool.mypy]
python_version = "3.13"
strict = true
namespace_packages = true
exclude = "(^|/|\\\\)venv($|/|\\\\)"
[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true
